Preserve instrument board grouping order